Finish card generation prepend function and fix up css html spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   border-style: border-box; 
 }
+
 body {
   font-size: 18px
 }
@@ -34,7 +35,6 @@ textarea {
 .idea-card-wrap {
   width: 278px;
   padding: 20px;
-  border: 1px dotted black;
 }
 
 .idea-card-wrap input {
@@ -46,28 +46,29 @@ textarea {
   font-size: 1em;
   color: #6D6E71;
 }
-.idea-card-wrap input:focus{
+
+.idea-card-wrap input:focus {
   outline: none;
 }
+
 .idea-card-wrap input::placeholder {
   font-size: 1em;
   font-weight: bold;
   color: #cccccc;
 }
-.idea-card-wrap {
-  width: 278px;
-  padding: 20px;
-  border: 1px dotted black;
-}
+
 .idea-card {
   position: relative;
 }
+
 .idea-card h1 {
   font-size: 1.5em;
 }
+
 .idea-card h2 {
   font-size: 1em;
 }
+
 .idea-card h1,
 .idea-card h2 {
   color: #6D6E71;
@@ -76,19 +77,23 @@ textarea {
   display: inline-block;
   margin: 0px;
 }
+
 .idea-card .rating,
 .idea-card p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
+
 .idea-card p {
   font-size: 1em;
   color: #939598;
 }
+
 .idea-card hr {
   border: 1px solid #D1D3D4;
   margin: 20px 0;
 }
+
 .idea-card button {
   border: none;
   margin: 0 5px 0 0;
@@ -97,23 +102,29 @@ textarea {
   width: 30px;
   vertical-align: middle;
 }
+
 .idea-card #delete-button {
   position: absolute;
   right: -5px;
   background: url(images/delete.svg) no-repeat;
 }
+
 .idea-card #delete-button:hover {
   background: url(images/delete-hover.svg) no-repeat;
 }
+
 .idea-card #upvote-button {
   background: url(images/upvote.svg) no-repeat;
 }
+
 .idea-card #upvote-button:hover {
   background: url(images/upvote-hover.svg) no-repeat;
 }
+
 .idea-card #downvote-button {
   background: url(images/downvote.svg) no-repeat;
 }
+
 .idea-card #downvote-button:hover{
   background: url(images/downvote-hover.svg) no-repeat;
 }
